RESOLVED FIXED294368
[Form Control Refresh] Fix remaining compute-kind-widget-generated WPT test failures
https://bugs.webkit.org/show_bug.cgi?id=294368
Summary [Form Control Refresh] Fix remaining compute-kind-widget-generated WPT test f...
Lily Spiniolas
Reported 2025-06-11 20:33:20 PDT
Attachments
Lily Spiniolas
Comment 1 2025-06-11 20:36:48 PDT
EWS
Comment 2 2025-06-12 01:43:03 PDT
Committed 296129@main (fd4319719a1d): <https://commits.webkit.org/296129@main> Reviewed commits have been landed. Closing PR #46643 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.