[macOS] Resolve all compute-kind-widget-generated WPT test failures when form control refresh enabled https://bugs.webkit.org/show_bug.cgi?id=294368 rdar://153152167

Reviewed by Aditya Keerthi and Abrar Rahman Protyasha.

Remove unnecessary border style adjustments when form control refresh
is enabled. All compute-kind-widget-generated WPT tests pass on macOS when
the setting is enabled as a result. Adjusted the padding of buttons to
compensate for the updated border values.

* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::controlBorder const):
(WebCore::RenderTheme::adjustButtonOrCheckboxOrColorWellOrInnerSpinButtonOrRadioStyle const):
* Source/WebCore/rendering/RenderTheme.h:
* Source/WebCore/rendering/adwaita/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::controlBorder const):
* Source/WebCore/rendering/adwaita/RenderThemeAdwaita.h:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.h:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::controlBorder const):
(WebCore::RenderThemeCocoa::adjustColorWellStyleForVectorBasedControls const):
(WebCore::RenderThemeCocoa::adjustButtonStyleForVectorBasedControls const):
(WebCore::RenderThemeCocoa::adjustMenuListButtonStyleForVectorBasedControls const):
* Source/WebCore/rendering/mac/RenderThemeMac.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::controlBorder const):

Canonical link: https://commits.webkit.org/296129@main