Source/WebCore/rendering/adwaita/RenderThemeAdwaita.h
@@ -97,7 +97,7 @@ private:
 
     LengthSize controlSize(StyleAppearance, const FontCascade&, const LengthSize&, float) const final;
     LengthSize minimumControlSize(StyleAppearance, const FontCascade&, const LengthSize&, float) const final;
-    LengthBox controlBorder(StyleAppearance, const FontCascade&, const LengthBox&, float) const final;
+    LengthBox controlBorder(StyleAppearance, const FontCascade&, const LengthBox&, float, const Element*) const final;
 
 #if PLATFORM(GTK) || PLATFORM(WPE)
     std::optional<Seconds> caretBlinkInterval() const override;
